<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:paddingTop="@dimen/dp_16"
    >


        <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="etOldPassword,etNewPassword,etReNewPassword,btnLogin"
                app:flow_maxElementsWrap="1"
                app:flow_wrapMode="aligned"
                app:flow_verticalGap="@dimen/dp_16"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
        />


        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etOldPassword"
                android:layout_width="@dimen/dp_295"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/rectangle_bg_edit_text"
                android:hint="@string/old_password"
                android:padding="@dimen/dp_16"
                style="@style/TextMedium14"
                android:fontFamily="@font/poppins_regular"
                tools:ignore="MissingConstraints"
                android:textColor="@color/btn_navigation_unselected_color"
        />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etNewPassword"
                android:layout_width="@dimen/dp_295"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/rectangle_bg_edit_text"
                android:hint="@string/new_password"
                android:padding="@dimen/dp_16"
                style="@style/TextMedium14"
                android:fontFamily="@font/poppins_regular"
                tools:ignore="MissingConstraints"
                android:textColor="@color/btn_navigation_unselected_color"
        />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etReNewPassword"
                android:layout_width="@dimen/dp_295"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/rectangle_bg_edit_text"
                android:hint="@string/re_new_password"
                android:padding="@dimen/dp_16"
                style="@style/TextMedium14"
                android:fontFamily="@font/poppins_regular"
                tools:ignore="MissingConstraints"
                android:textColor="@color/btn_navigation_unselected_color"
        />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/dp_295"
                android:layout_height="@dimen/dp_50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/change_password"
                android:theme="@style/AppTheme.Button"
                app:layout_constraintVertical_bias="0.16000003"
                android:layout_marginTop="@dimen/dp_16"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
