<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="issueDetailViewModel"
                type="com.android.jetpackbase.features.issuedetails.IssueDetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30">

            <TextView
                    android:id="@+id/tvIssueName"
                    style="@style/TextMedium24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{issueDetailViewModel.issueDataLiveData.issueName}"
                    android:textColor="@color/issue_title_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvIssueDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.10" />

            <TextView
                    android:id="@+id/tvIssueDate"
                    style="@style/TextMedium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@{issueDetailViewModel.issueDataLiveData.date}"
                    android:textColor="@color/secondary_text_color"
                    app:layout_constraintBottom_toBottomOf="@id/tvIssueName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvIssueName" />

            <TextView
                    android:id="@+id/tvVehicleNo"
                    style="@style/TextMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@{issueDetailViewModel.issueDataLiveData.vehicleNo}"
                    android:textColor="@color/issue_date_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvIssueName" />

            <TextView
                    android:id="@+id/tvDescriptionLabel"
                    style="@style/TextMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvVehicleNo" />

            <TextView
                    android:id="@+id/tvDescription"
                    style="@style/TextMedium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@{issueDetailViewModel.issueDataLiveData.description}"
                    android:textColor="@color/secondary_text_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLabel" />

            <TextView
                    android:id="@+id/tvLocationLabel"
                    style="@style/TextMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <androidx.cardview.widget.CardView
                    android:id="@+id/cvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    app:cardCornerRadius="@dimen/dp_8"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLocationLabel">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dp_16">

                    <TextView
                            android:id="@+id/tvIssueAddress"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_map"
                            android:drawablePadding="@dimen/dp_4"
                            android:text="@{issueDetailViewModel.issueDataLiveData.addressInfo.address}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                            android:id="@+id/tvNavigate"
                            style="@style/TextMedium14"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_16"
                            android:layout_marginTop="@dimen/dp_16"
                            android:drawableStart="@drawable/ic_navigate"
                            android:drawablePadding="@dimen/dp_8"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/navigate"
                            android:textColor="@color/navigate_color"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@+id/tvIssueAddress"
                            app:layout_constraintTop_toBottomOf="@+id/tvIssueAddress" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                    android:id="@+id/tvWriteNotes"
                    style="@style/TextMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/write_notes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvLocation" />

            <EditText
                    android:id="@+id/etNotes"
                    style="@style/TextMedium12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:background="@drawable/rectangle_bg_edit_text"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="start"
                    android:hint="@string/hint_write_comments"
                    android:lines="8"
                    android:maxLines="10"
                    android:minLines="6"
                    android:padding="@dimen/dp_16"
                    android:textColor="@color/secondary_text_color"
                    app:layout_constraintStart_toStartOf="@+id/tvWriteNotes"
                    app:layout_constraintTop_toBottomOf="@+id/tvWriteNotes" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="@dimen/dp_295"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/mark_as_completed"
                    android:theme="@style/AppTheme.Button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNotes" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
