<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="listener"
                type="com.android.jetpackbase.utils.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChangePassword"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:onClick="@{(view) -> listener.onClick(view)}"
                android:paddingTop="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.060000002" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="@id/btnChangePassword"
                app:layout_constraintEnd_toEndOf="@id/btnChangePassword"
                app:layout_constraintTop_toTopOf="@id/btnChangePassword"
                tools:ignore="ContentDescription" />

        <View
                android:id="@+id/dividerChangePwd"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/divider_color"
                app:layout_constraintEnd_toEndOf="@+id/btnChangePassword"
                app:layout_constraintStart_toStartOf="@+id/btnChangePassword"
                app:layout_constraintTop_toBottomOf="@+id/btnChangePassword" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnHelp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_30"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:onClick="@{(view) -> listener.onClick(view)}"
                android:paddingTop="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/help"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerChangePwd"
                app:layout_constraintVertical_bias="0.060000002" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"
                app:layout_constraintBottom_toBottomOf="@id/btnHelp"
                app:layout_constraintEnd_toEndOf="@id/btnHelp"
                app:layout_constraintTop_toTopOf="@id/btnHelp"
                tools:ignore="ContentDescription" />

        <View
                android:id="@+id/dividerHelp"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_2"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/divider_color"
                app:layout_constraintEnd_toEndOf="@+id/btnHelp"
                app:layout_constraintStart_toStartOf="@+id/btnHelp"
                app:layout_constraintTop_toBottomOf="@+id/btnHelp" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_30"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:onClick="@{(view) -> listener.onClick(view)}"
                android:paddingTop="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_8"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/logout_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerHelp"
                app:layout_constraintVertical_bias="0.060000002" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
